--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node ./db/seed.js",
+    "seed:dev": "nodemon index.js",
     "start": "node index.js",
     "start:dev": "nodemon index.js"
   },
